style.css
body{
    margin: 0;
    font-family: arial;
}

header{
    width: 100%;
    height: 572px;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image: url(./assets/img/hero.png);
    background-repeat: no-repeat;
    background-size: cover;
    margin-bottom: 136px;
}

nav{
    width: 100%;
    height: 128px;
    background-color: #E76C1F;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 0;
    filter: drop-shadow( 0 5px 5px rgba(81, 18, 0, 0.163));
}

.nav-container{
    width: 100%;
    max-width: 1440px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-inline: 40px;
}

.header-icon{
    height: 56px;
}

.hero-img{
    width: 100%;
    height: 572px;
    object-fit: cover;
}

.hero-logo{
    width: 226px;
    position: absolute;
    top: 459px;
}

.header-details{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 16px;
}

.page-title{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    gap: 16px;
}

h1{
    margin: 0;
}

.title{
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 48px;
    font-weight: bold;
    margin-bottom: 16px;
}

.color-a{
    color: #E76C1F;
    margin: 0;
}

.color-b{
    color: black;
    margin: 0;
}

.ratings{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #FACAAC;
    padding: 5px 4px;
    gap: 8px;
    p{
        font-size: 24px;
        margin: 0;
    }
}

.ratings-icon{
    height: 24px;
}

.rating-votes{
    color: rgb(86, 86, 86);
}

.title-sub-text{
    font-size: 24px;
    font-weight: bold;
    margin-bottom: 16px;
}

.section-title{
    height: 50px;
    background-color: #E76C1F;
    display: flex;
    justify-content: start;
    align-items: center;
    gap: 16px;
    padding-left: 32px;
    margin-bottom: 32px;
    p{
        font-size: 24px;
        font-weight: bold;
        color: white;
    }
}

.section-logo{
    height: 40px;
}

.dish-container{
    width: 100%;
    max-width: 1440px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;
    gap: 16px;
    padding-inline: 40px;
}

.dishes-base{
    width: 720px;
    height: 160px;
    border-radius: 16px;
    background-color: #FDEADC;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-inline: 20px;
}

.dishes-text-sice{
    font-size: 16px;
    font-weight: bold;
}

.dish-info{
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    gap: 8px;
}

.main-container{
    width: 100%;
    display: flex;
    align-items: start;
}

.dishes{
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 32px;
}

.sticky-wide-screen{
    width: 435px;
    height: 794px;
    background-color: #363534;
    border-top-left-radius: 30px;
    border-bottom-left-radius: 30px;
    position: sticky;
    left: calc(100% - 435px);
    top: 0;
}

.image-size{
    width: 200px;
    height: 120px;
    object-fit: cover;
    border-radius: 16px;
}

